# math-game

./: .gitignore  CMakeLists.txt  README.md  main.c
